--- a/IMS_Incidents_Webscrape.ipynb
+++ b/IMS_Incidents_Webscrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 56,
    "metadata": {
     "scrolled": true
    },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,40 +175,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Allow time for table to load\n",
     "time.sleep(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Export to excel\n",
-    "driver.find_element_by_id('ctl00_ContentPlaceHolder1_btnexport').click()"
+    "#Obtain number of rows for report to use to split array into rows for dataframe\n",
+    "#Number of rows is printed with the report and will be dynamic as more records are added\n",
+    "n_rows = driver.find_element_by_xpath('//span[@id=\"ctl00_ContentPlaceHolder1_lblRecords\"]').text\n",
+    "n_rows = int(n_rows[0:3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "time.sleep(2)"
+    "#Extract column headers\n",
+    "for th in driver.find_elements_by_xpath('//table[@id=\"ctl00_ContentPlaceHolder1_GridView1\"]'):\n",
+    "        ths = th.find_elements_by_tag_name('th')\n",
+    "        cols = [th.text for th in ths]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Write to xls for alteryx input \n",
-    "shutil.move(dl_path + 'Incidents.xls', 'X:/Ying_Ba/MH - Safety Metrics/Input/incidents_report.xls')"
+    "#Extract table rows\n",
+    "for td in driver.find_elements_by_xpath('//table[@id=\"ctl00_ContentPlaceHolder1_GridView1\"]'):\n",
+    "    tds = td.find_elements_by_tag_name('td')\n",
+    "    data = [td.text for td in tds]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create dataframe - assign extracted column headers for colnames and split array into # of rows\n",
+    "incidents_report = pd.DataFrame(columns=cols, data=np.array_split(data , n_rows))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Write to excel for alteryx input\n",
+    "incidents_report.to_excel('X:/Ying_Ba/MH - Safety Metrics/Input/incidents_report.xls')"
    ]
   }
  ],
